fix: mini spacing

--- a/src/components/reusable/popover/popover.scss
+++ b/src/components/reusable/popover/popover.scss
@@ -53,7 +53,7 @@
   padding: 15px;
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: 8px;
   justify-content: space-between;
 
   .mini-content {
@@ -64,7 +64,7 @@
 .mini-header {
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: px;
   width: 95%;
 
   kyn-button.close {
@@ -74,7 +74,7 @@
     width: 20px;
     height: 20px;
     display: inline-flex;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
     border-radius: 4px;
     cursor: pointer;
